--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     </div>
 
     <div id="popup" class="popup">
-        <input type="text" id="username">
-        <input type="password" id="password">
-        <button onclick="submitCredentials()">[S]</button>
+        <input type="text" id="username" placeholder="ユーザー名">
+        <input type="password" id="password" placeholder="パスワード">
+        <button onclick="submitCredentials()">送信</button>
         <div id="urlInput" style="display: none;">
-            <input type="text" id="proxyUrl" placeholder="URL">
-            <button onclick="executeProxy()">[G]</button>
+            <input type="text" id="proxyUrl" placeholder="URLを貼り付けてください">
+            <button onclick="executeProxy()">実行</button>
         </div>
     </div>
 
