--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>超軽量計算機</title>
-    <link rel="stylesheet" href="/src/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="calculator">
@@ -40,6 +40,6 @@
         </div>
     </div>
 
-    <script src="/src/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
