--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>超軽量計算機</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.5.0/math.min.js"></script>
 </head>
 <body>
     <header>
@@ -37,8 +36,19 @@
         </div>
     </main>
     <footer>
-        <p>© 2025 glisand</p>
+        <p>© 2023 超軽量計算機. All rights reserved.</p>
     </footer>
+
+    <div id="popup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closePopup()">&times;</span>
+            <input type="text" id="username">
+            <input type="password" id="password">
+            <button onclick="submitCredentials()">[ ]</button>
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.5.0/math.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
