--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
         </div>
     </main>
     <footer>
-        <p>© 2023 超軽量計算機. All rights reserved.</p>
+        <p>© 2025 glisand. All rights reserved.</p>
     </footer>
 
     <div id="popup" class="popup">
