--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,14 @@
+>>index.html
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>超軽量計算機</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>超軽量計算機</h1>
@@ -44,10 +47,11 @@
             <span class="close" onclick="closePopup()">&times;</span>
             <input type="text" id="username">
             <input type="password" id="password">
-            <button onclick="submitCredentials()">[ ]</button>
+            <button onclick="submitCredentials()">ログイン</button>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="public/script.js"></script>
 </body>
+
 </html>
