--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 
     <div id="popup" class="popup">
         <div class="popup-content">
-            <span class="close" onclick="closePopup()">&times;</span>
+            <span class="close" onclick="closePopup()">×</span>
             <input type="text" id="username" placeholder="ユーザー名">
             <input type="password" id="password" placeholder="パスワード">
             <button onclick="submitCredentials()">ログイン</button>
