--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,9 @@
     <div id="popup" class="popup">
         <div class="popup-content">
             <span class="close" onclick="closePopup()">×</span>
-            <input type="text" id="username" placeholder="ユーザー名">
-            <input type="password" id="password" placeholder="パスワード">
-            <button onclick="submitCredentials()">ログイン</button>
+            <input type="text" id="username">
+            <input type="password" id="password">
+            <button onclick="submitCredentials()">[ ]</button>
         </div>
     </div>
 
