--- a/public/index.html
+++ b/public/index.html
@@ -8,39 +8,41 @@
 </head>
 <body>
     <div id="calculator">
-        <input type="text" id="display" disabled>
+        <div id="display"></div>
         <div id="buttons">
-            <button onclick="appendNumber('7')">7</button>
-            <button onclick="appendNumber('8')">8</button>
-            <button onclick="appendNumber('9')">9</button>
-            <button onclick="appendOperator('+')">+</button>
-            <button onclick="appendNumber('4')">4</button>
-            <button onclick="appendNumber('5')">5</button>
-            <button onclick="appendNumber('6')">6</button>
-            <button onclick="appendOperator('-')">-</button>
-            <button onclick="appendNumber('1')">1</button>
-            <button onclick="appendNumber('2')">2</button>
-            <button onclick="appendNumber('3')">3</button>
-            <button onclick="appendOperator('×')">×</button>
-            <button onclick="appendNumber('0')">0</button>
-            <button onclick="appendDecimal()">.</button>
+            <button onclick="appendToDisplay('7')">7</button>
+            <button onclick="appendToDisplay('8')">8</button>
+            <button onclick="appendToDisplay('9')">9</button>
+            <button onclick="appendToDisplay('+')">+</button>
+            <button onclick="appendToDisplay('4')">4</button>
+            <button onclick="appendToDisplay('5')">5</button>
+            <button onclick="appendToDisplay('6')">6</button>
+            <button onclick="appendToDisplay('-')">-</button>
+            <button onclick="appendToDisplay('1')">1</button>
+            <button onclick="appendToDisplay('2')">2</button>
+            <button onclick="appendToDisplay('3')">3</button>
+            <button onclick="appendToDisplay('*')">×</button>
+            <button onclick="appendToDisplay('0')">0</button>
+            <button onclick="appendToDisplay('.')">.</button>
             <button onclick="calculate()">=</button>
-            <button onclick="appendOperator('÷')">÷</button>
+            <button onclick="appendToDisplay('/')">÷</button>
+            <button onclick="appendToDisplay('√')">√</button>
+            <button onclick="appendToDisplay('^')">^</button>
             <button onclick="clearDisplay()">C</button>
-            <button onclick="sqrt()">√</button>
-            <button onclick="power()">^</button>
         </div>
     </div>
+
     <div id="browser" style="display:none;">
         <div id="browser-controls">
             <button onclick="goBack()">元に戻る</button>
             <button onclick="goForward()">やり直す</button>
             <button onclick="reloadPage()">再読み込み</button>
-            <input type="text" id="address-bar" placeholder="Enter URL">
-            <button onclick="navigate()">Go</button>
+            <input type="text" id="address-bar" placeholder="URLを入力">
+            <button onclick="navigate()">移動</button>
         </div>
         <iframe id="browser-content" src=""></iframe>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
