--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
             <input type="text" id="address-bar" placeholder="URLを入力">
             <button onclick="navigate()">移動</button>
         </div>
-        <iframe id="browser-content" src=""></iframe>
+        <div id="browser-content"></div>
     </div>
 
     <script src="script.js"></script>
