--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,13 @@
             <input type="text" id="address-bar" placeholder="URLを入力" onkeypress="handleAddressBarKeyPress(event)">
             <button onclick="navigate()">移動</button>
         </div>
-        <div id="loading" style="display:none;">読み込み中...</div>
+        <div id="loading">
+            <div class="loadingio-spinner-rolling-nq4q5u6dq7r">
+                <div class="ldio-x2uulkbinc">
+                    <div></div>
+                </div>
+            </div>
+        </div>
         <div id="browser-content"></div>
     </div>
 
