--- a/public/index.html
+++ b/public/index.html
@@ -7,47 +7,49 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="calculator">
-        <div id="display"></div>
-        <div id="buttons">
-            <button onclick="appendToDisplay('7')">7</button>
-            <button onclick="appendToDisplay('8')">8</button>
-            <button onclick="appendToDisplay('9')">9</button>
-            <button onclick="appendToDisplay('+')">+</button>
-            <button onclick="appendToDisplay('4')">4</button>
-            <button onclick="appendToDisplay('5')">5</button>
-            <button onclick="appendToDisplay('6')">6</button>
-            <button onclick="appendToDisplay('-')">-</button>
-            <button onclick="appendToDisplay('1')">1</button>
-            <button onclick="appendToDisplay('2')">2</button>
-            <button onclick="appendToDisplay('3')">3</button>
-            <button onclick="appendToDisplay('*')">×</button>
-            <button onclick="appendToDisplay('0')">0</button>
-            <button onclick="appendToDisplay('.')">.</button>
-            <button onclick="calculate()">=</button>
-            <button onclick="appendToDisplay('/')">÷</button>
-            <button onclick="appendToDisplay('√')">√</button>
-            <button onclick="appendToDisplay('^')">^</button>
-            <button onclick="clearDisplay()">C</button>
-        </div>
-    </div>
-
-    <div id="browser" style="display:none;">
-        <div id="browser-controls">
-            <button onclick="goBack()">元に戻る</button>
-            <button onclick="goForward()">やり直す</button>
-            <button onclick="reloadPage()">再読み込み</button>
-            <input type="text" id="address-bar" placeholder="URLを入力" onkeypress="handleAddressBarKeyPress(event)">
-            <button onclick="navigate()">移動</button>
-        </div>
-        <div id="loading">
-            <div class="loadingio-spinner-rolling-nq4q5u6dq7r">
-                <div class="ldio-x2uulkbinc">
-                    <div></div>
-                </div>
+    <div id="container">
+        <div id="calculator">
+            <div id="display"></div>
+            <div id="buttons">
+                <button onclick="appendToDisplay('7')">7</button>
+                <button onclick="appendToDisplay('8')">8</button>
+                <button onclick="appendToDisplay('9')">9</button>
+                <button onclick="appendToDisplay('+')">+</button>
+                <button onclick="appendToDisplay('4')">4</button>
+                <button onclick="appendToDisplay('5')">5</button>
+                <button onclick="appendToDisplay('6')">6</button>
+                <button onclick="appendToDisplay('-')">-</button>
+                <button onclick="appendToDisplay('1')">1</button>
+                <button onclick="appendToDisplay('2')">2</button>
+                <button onclick="appendToDisplay('3')">3</button>
+                <button onclick="appendToDisplay('*')">×</button>
+                <button onclick="appendToDisplay('0')">0</button>
+                <button onclick="appendToDisplay('.')">.</button>
+                <button onclick="calculate()">=</button>
+                <button onclick="appendToDisplay('/')">÷</button>
+                <button onclick="appendToDisplay('√')">√</button>
+                <button onclick="appendToDisplay('^')">^</button>
+                <button onclick="clearDisplay()">C</button>
             </div>
         </div>
-        <div id="browser-content"></div>
+
+        <div id="browser" style="display:none; flex-direction: column; height: 100vh;">
+            <div id="browser-controls">
+                <button onclick="goBack()">元に戻る</button>
+                <button onclick="goForward()">やり直す</button>
+                <button onclick="reloadPage()">再読み込み</button>
+                <input type="text" id="address-bar" placeholder="URLを入力" onkeypress="handleAddressBarKeyPress(event)">
+                <button onclick="navigate()">移動</button>
+            </div>
+            <div id="loading">
+                <div class="loadingio-spinner-rolling-nq4q5u6dq7r">
+                    <div class="ldio-x2uulkbinc">
+                        <div></div>
+                    </div>
+                </div>
+            </div>
+            <div id="browser-content" style="flex-grow: 1; overflow: auto;"></div>
+        </div>
     </div>
 
     <script src="script.js"></script>
