--- a/public/index.html
+++ b/public/index.html
@@ -33,13 +33,12 @@
     </div>
 
     <div id="browser" style="display:none;">
-        <div id="browser-controls"> <div id="browser-controls">
+        <div id="browser-controls">
             <button onclick="goBack()">元に戻る</button>
             <button onclick="goForward()">やり直す</button>
             <button onclick="reloadPage()">再読み込み</button>
             <input type="text" id="address-bar" placeholder="URLを入力" onkeypress="handleAddressBarKeyPress(event)">
             <button onclick="navigate()">移動</button>
-        </div>
         </div>
         <div id="loading">
             <div class="loadingio-spinner-rolling-nq4q5u6dq7r">
@@ -48,7 +47,7 @@
                 </div>
             </div>
         </div>
-        <div id="browser-content"></div>
+        <iframe id="browser-content" sandbox="allow-scripts allow-same-origin"></iframe>
     </div>
 
     <script src="script.js"></script>
