--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-        <iframe id="browser-content" sandbox="allow-scripts allow-same-origin"></iframe>
+        <div id="browser-content"></div>
     </div>
 
     <script src="script.js"></script>
